Firmware/.metadata/.plugins/org.eclipse.cdt.ui/TVC-controller.build.log
15:23:45 **** Build of configuration Debug for project TVC-controller ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_NUCLEO_64 -DUSE_HAL_DRIVER -DSTM32G491xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/BSP/STM32G4xx_Nucleo -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -I../FATFS/Target -I../FATFS/App -I../Middlewares/Third_Party/FatFs/src -I"/home/if-himanshu/ws/TVC_FlightController/Firmware/TVC-controller/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:142:33: error: expected expression before 'Baro_data'
  142 |           printf("altitude: %f",Baro_data.)
      |                                 ^~~~~~~~~
../Core/Src/main.c:142:44: error: expected ';' before '}' token
  142 |           printf("altitude: %f",Baro_data.)
      |                                            ^
      |                                            ;
......
  145 |   }
      |   ~                                         
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

15:23:45 Build Failed. 3 errors, 0 warnings. (took 125ms)

